<resources>
    <string name="app_name">My Application</string>
    <string name="welcome">Welcome!!</string>
    <string name="enter_login_screen">Enter Login Screen</string>
    <string name="name">Name</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_phone_no">Enter phone no.</string>
    <string name="register">Register</string>
    <string name="go_to_login_page">go to Login Page</string>
    <string name="register_page">Register Page</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_page">Login Page</string>
    <string name="title_activity_show_circle_code">ShowCircleCode</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="share_this_invite_code_with_the_people_you_want_in_your_circle">Share this invite code with the people you want in your circle:</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="select_options">Select Options</string>
    <string name="joincircle">JoinCircle</string>
    <string name="my_circle">My Circle</string>
    <string name="log_out">Log Out</string>
    <string name="invite">Invite</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dialog_message">Do you want to close this application</string>
    <string name="dialog_title">Exit</string>
    <string name="username">Username</string>

</resources>