<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:backgroundTintMode="src_atop" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#11698E"
        app:cardBackgroundColor="?android:attr/colorBackground"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_options"
                android:textAlignment="center"
                android:textColor="#1566e0"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/profileBtn"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="40dp" />

            <Button
                android:id="@+id/profileBtn"
                android:text="@string/profile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#1566e0"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/myCircleBtn"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="83dp" />

            <Button
                android:id="@+id/InviteBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#1566e0"
                android:text="@string/invite"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/logoutBtn"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="143dp" />

            <Button
                android:id="@+id/myCircleBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#1566e0"
                android:text="@string/my_circle"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/joinCircleBtn"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="267dp" />

            <Button
                android:id="@+id/joinCircleBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#1566e0"
                android:text="@string/joincircle"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/InviteBtn"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="217dp" />

            <Button
                android:id="@+id/MyCurLocBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#1566e0"
                android:text="My Current Location on Map"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="328dp" />

            <Button
                android:id="@+id/homeBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#1566e0"
                android:text="@string/home"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/MyCurLocBtn"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="383dp" />

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#1566e0"
                android:text="@string/log_out"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/homeBtn"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="426dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>